--- a/package.json
+++ b/package.json
@@ -42,19 +42,15 @@
     "debug": "^2.2.0",
     "es6-shim": "^0.35.1",
     "express": "^4.14.0",
-    "grunt": "^1.0.1",
-    "grunt-cli": "^1.2.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-ts": "^6.0.0-beta.3",
-    "grunt-tslint": "^3.3.0",
-    "grunt-typescript-using-tsconfig": "^0.7.1",
     "hbs": "^4.0.1",
+    "jquery": "^3.1.1",
     "mime": "^1.3.4",
     "reflect": "^0.1.3",
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.0.0-beta.12",
     "serve-static": "^1.11.1",
     "shim": "^0.6.0",
+    "stylus": "^0.54.5",
     "systemjs": "0.19.39",
     "tsconfig": "^5.0.3",
     "tslint": "^3.15.1",
@@ -62,5 +58,20 @@
     "typings": "^1.4.0",
     "zone": "^0.3.4",
     "zone.js": "^0.6.25"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-stylus": "^1.2.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-ts": "^6.0.0-beta.3",
+    "grunt-tslint": "^3.3.0",
+    "grunt-typescript-using-tsconfig": "^0.7.1",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-stylus": "^2.5.0",
+    "gulp-typescript": "^3.0.2",
+    "gulp-uglify": "^2.0.0",
+    "karma": "^1.3.0"
   }
 }
