--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/platform-browser-dynamic": "~2.1.0",
     "@angular/router": "~3.1.0",
     "@angular/upgrade": "~2.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.11",
     "angular-in-memory-web-api": "~0.1.5",
     "bootstrap": "^3.3.7",
     "config": "^1.21.0",
@@ -45,6 +46,7 @@
     "hbs": "^4.0.1",
     "jquery": "^3.1.1",
     "mime": "^1.3.4",
+    "ng-bootstrap": "^1.0.0-beta.2",
     "reflect": "^0.1.3",
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.0.0-beta.12",
